--- a/app/views/single.twig
+++ b/app/views/single.twig
@@ -1,11 +1,5 @@
 {% extends '_html.twig' %}
 
-{% block hero %}
-  {% include 'template-parts/hero.twig' %}
-{% endblock %}
-
-{% block content %}
-  <section class="c-section c-section--article">
-    <h1 class="text-center">Title</h1>
-  </section>
+{% block metas %}
+  {# --SEO-- #}
 {% endblock %}
