--- a/src/scss/icons/fontello.css
+++ b/src/scss/icons/fontello.css
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?40091536#fontello') format('svg');
+    src: url('../font/fontello.svg?93813126#fontello') format('svg');
   }
 }
 */
@@ -57,9 +57,11 @@
  
 .icon-ok:before { content: '\e800'; } /* '' */
 .icon-cancel:before { content: '\e801'; } /* '' */
+.icon-arrow-left:before { content: '\e802'; } /* '' */
+.icon-arrow-right:before { content: '\e803'; } /* '' */
 .icon-facebook:before { content: '\f052'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
 .icon-linkedin:before { content: '\f0e1'; } /* '' */
-.icon-youtube-play:before { content: '\f16a'; } /* '' */
+.icon-youtube:before { content: '\f16a'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
