--- a/src/scss/pages/_page.scss
+++ b/src/scss/pages/_page.scss
@@ -1,5 +1,11 @@
 .c-section {
   outline: none;
+
+  &__title {
+    font-size: $fs-25;
+    color: $black;
+    font-weight: $bold-font;
+  }
 }
 
 @include breakpoint(large) {
