--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -83,7 +83,7 @@ $black: #434343;
 $white: #fff;
 
 //Basic Color Alters
-$primary-alt: #eff6ff;
+$primary-alt: #0053ec;
 
 $secondary-alt: #ac8cd6;
 
@@ -98,8 +98,8 @@ $black-font: 900;
 
 $body-background: $white;
 $body-font-color: $dark-gray;
-$body-font-family: "Karla", sans-serif;
-$font-family-secondary: "Signika", sans-serif;
+$body-font-family: "Mulish", sans-serif;
+$font-family-secondary: "Mulish", sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
