--- a/src/scss/icons/fontello.css
+++ b/src/scss/icons/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?61572876');
-  src: url('../font/fontello.eot?61572876#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?61572876') format('woff2'),
-       url('../font/fontello.woff?61572876') format('woff'),
-       url('../font/fontello.ttf?61572876') format('truetype'),
-       url('../font/fontello.svg?61572876#fontello') format('svg');
+  src: url('../fonts/fontello/fontello.eot?61572876');
+  src: url('../fonts/fontello/fontello.eot?61572876#iefix') format('embedded-opentype'),
+       url('../fonts/fontello/fontello.woff2?61572876') format('woff2'),
+       url('../fonts/fontello/fontello.woff?61572876') format('woff'),
+       url('../fonts/fontello/fontello.ttf?61572876') format('truetype'),
+       url('../fonts/fontello/fontello.svg?61572876#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?61572876#fontello') format('svg');
+    src: url('../fonts/fontello/fontello.svg?61572876#fontello') format('svg');
   }
 }
 */
