--- a/src/scss/pages/_page.scss
+++ b/src/scss/pages/_page.scss
@@ -4,7 +4,7 @@
   &__title {
     font-size: $fs-30;
     color: $black;
-    font-weight: $bold-font;
+    font-weight: $font-bold;
   }
 
   .c-card-image {
