--- a/src/scss/base/_add-ons.scss
+++ b/src/scss/base/_add-ons.scss
@@ -22,7 +22,9 @@ $gray-colors: (
 $other-colors: (
   'white': $white,
   'black': $black,
-  'success': $success-color
+  'success': $success-color,
+  'alert': $alert-color,
+  'warning': $warning-color
 );
 
 //-------------|---------------
@@ -30,6 +32,7 @@ $other-colors: (
 //-------------|---------------
 
 $font-sizes: (
+  '12' : $fs-12,
   '14' : $fs-14,
   '16' : $fs-16,
   '18' : $fs-18,
@@ -41,13 +44,13 @@ $font-sizes: (
 );
 
 $font-weights: (
-  'light': $light-font,
-  'regular': $regular-font,
-  'medium': $medium-font,
-  'sbold': $semibold-font,
-  'bold': $bold-font,
-  'xbold': $extrabold-font,
-  'black': $extrabold-font
+  'light': $font-light,
+  'regular': $font-regular,
+  'medium': $font-medium,
+  'sbold': $font-semibold,
+  'bold': $font-bold,
+  'xbold': $font-extrabold,
+  'black': $font-extrabold
 );
 
 $font-families: (
@@ -79,11 +82,11 @@ $font-families: (
 }
 
 @each $key, $gcolor in $gray-colors {
-  .#{$key}-gray {
+  .gray-#{$key} {
     color: $gcolor;
   }
 
-  .bg-#{$key}-gray {
+  .bg-gray-#{$key} {
     background-color: $gcolor;
   }
 }
