--- a/resources/vue/src/assets/styles/pages/_home.scss
+++ b/resources/vue/src/assets/styles/pages/_home.scss
@@ -1,9 +1,13 @@
-.c-section--home {
-  outline: none;
+.c-section {
+  &--home {
+    outline: none;
+  }
 }
 
 @include media-breakpoint-up(lg) {
-  .c-section--home {
-    outline: none;
+  .c-section {
+    &--home {
+      outline: none;
+    }
   }
 }
