Update | Better form + Add POST

--- a/resources/vue/src/assets/styles/base/_variables.scss
+++ b/resources/vue/src/assets/styles/base/_variables.scss
@@ -11,7 +11,7 @@ $primary-color: #0064ec;
 $secondary-color: #6600ec;
 $success-color: #3adb76;
 $warning-color: #ffae00;
-$alert-color: #cc4b37;
+$alert-color: #e00808;
 
 /* 1.2 Alter colors */
 
