--- a/app/views/_html-app.twig
+++ b/app/views/_html-app.twig
@@ -11,9 +11,7 @@
   </head>
 
   <body>
-    {% block body %}
-      {# content #}
-    {% endblock %}
+    <main id="app" class="c-main"></main>
 
     {{ function('wp_footer') }}
   </body>
