--- a/app/views/_html-seo.twig
+++ b/app/views/_html-seo.twig
@@ -1,9 +1,9 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="{{ site.name }}" />
-<meta property="og:image" content="{{ theme.link }}/static/images/og_image.png" />	
+<meta property="og:image" content="{{ theme.link }}/static/public/images/og_image.png" />	
 <meta property="og:description" content="{{ site.description }}" />	
 
-<meta name="twitter:image" content="{{ theme.link }}/static/images/og_image.png">  
+<meta name="twitter:image" content="{{ theme.link }}/static/public/images/og_image.png">  
 <meta property="twitter:card" content="summary_large_image">  
 <meta property="twitter:title" content="{{ site.name }}">  
 <meta property="twitter:site" content="@pandawp"/>
