--- a/resources/vue/src/assets/styles/base/_reset.scss
+++ b/resources/vue/src/assets/styles/base/_reset.scss
@@ -76,3 +76,53 @@ select {
   border-radius: 5px;
   overflow: hidden;
 }
+
+/* Bootstrap | Toast */
+.toast:not(.show) {
+  display: block;
+}
+
+/* WordPress */
+.wp-block-embed {
+  &.aligncenter {
+    display: flex;
+    justify-content: center;
+  }
+
+  &.alignright {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  &.alignwide {
+    .wp-block-embed {
+      &__wrapper {
+        height: 0;
+        overflow: hidden;
+        padding-bottom: 56.25%;
+        padding-top: 30px;
+        position: relative;
+
+        iframe {
+          left: 0;
+          top: 0;
+          height: 100%;
+          width: 100%;
+          position: absolute;
+        }
+      }
+    }
+  }
+}
+
+.wp-block-gallery {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.wp-block-image {
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
