--- a/resources/vue/src/assets/styles/base/_variables.scss
+++ b/resources/vue/src/assets/styles/base/_variables.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&family=Titillium+Web&family=Ubuntu:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&family=Titillium+Web&family=Ubuntu:wght@400;700&display=swap');
 
 /*
 * -----------------------------------------------------------/
@@ -58,5 +58,5 @@ $font-extrabold: 800;
 $font-black: 900;
 
 /* 2.3 Font Families */
-$body-font-family: "Josefin Sans", sans-serif;
-$secondary-font-family: "Josefin Sans", sans-serif;
+$body-font-family: 'Josefin Sans', sans-serif;
+$secondary-font-family: 'Josefin Sans', sans-serif;
