--- a/resources/vue/src/assets/styles/main.scss
+++ b/resources/vue/src/assets/styles/main.scss
@@ -1,4 +1,4 @@
-@import "imports/modules";
-@import "imports/base";
-@import "imports/components";
-@import "imports/pages";
+@import 'imports/modules';
+@import 'imports/base';
+@import 'imports/components';
+@import 'imports/pages';
