--- a/resources/vue/src/assets/styles/pages/_home.scss
+++ b/resources/vue/src/assets/styles/pages/_home.scss
@@ -4,10 +4,10 @@
   }
 }
 
-@include media-breakpoint-up(lg) {
-  .c-section {
-    &--home {
-      outline: none;
-    }
-  }
-}
+// @include media-breakpoint-up(lg) {
+//   .c-section {
+//     &--home {
+//       outline: none;
+//     }
+//   }
+// }
