--- a/resources/vue/src/assets/styles/base/_mixins.scss
+++ b/resources/vue/src/assets/styles/base/_mixins.scss
@@ -8,17 +8,15 @@
 
 @mixin box-shadow($align: right, $color: rgba($black, 0.45), $x: 10px, $y: 10px, $size: 20px) {
   @if $align == left {
-    box-shadow: $color $x -$y $size; /* New */
-  }
-
-  @else {
+    box-shadow: $color $x - $y $size; /* New */
+  } @else {
     box-shadow: $color $x $y $size; /* New */
   }
 }
 
 @mixin hr($x: left, $y: top, $color: $primary-color, $size: 4px, $desp: 0) {
   &::after {
-    content: "";
+    content: '';
     background: $color;
     width: 38px;
     height: $size;
@@ -28,28 +26,28 @@
       left: 0;
       top: -0.5rem;
       margin: auto;
-    }
-
-    @else if $x == left and $y == bottom {
+    } @else if $x == left and $y == bottom {
       left: 0;
       bottom: $desp;
       margin: auto;
-    }
-
-    @else if $x == center and $y == bottom {
+    } @else if $x == center and $y == bottom {
       left: 0;
       right: 0;
       bottom: $desp;
       margin: auto;
-    }
-
-    @else if $x == center and $y == top {
+    } @else if $x == center and $y == top {
       left: 0;
       right: 0;
       top: -0.5rem;
       margin: auto;
     }
   }
+}
+
+@mixin flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @mixin ul-reset {
