--- a/resources/vue/src/assets/styles/imports/base.scss
+++ b/resources/vue/src/assets/styles/imports/base.scss
@@ -1,7 +1,8 @@
-@import "../base/variables";
-@import "../base/base";
-@import "../base/helpers";
-@import "../base/settings";
-@import "../base/mixins";
-@import "../base/reset";
-@import "../base/typo";
+@import '../base/variables';
+@import '../base/mixins';
+@import '../base/base';
+@import '../base/core';
+@import '../base/helpers';
+@import '../base/settings';
+@import '../base/reset';
+@import '../base/typo';
