--- a/resources/vue/src/assets/styles/imports/modules.scss
+++ b/resources/vue/src/assets/styles/imports/modules.scss
@@ -1,3 +1,3 @@
-@import "../autoload/aos";
-@import "../autoload/bootstrap";
-@import "../autoload/swiper";
+// @import "../autoload/aos";
+@import '../autoload/prime';
+// @import "../autoload/swiper";
