--- a/resources/vue/src/assets/styles/pages/_page.scss
+++ b/resources/vue/src/assets/styles/pages/_page.scss
@@ -12,8 +12,8 @@
   }
 }
 
-@include media-breakpoint-up(lg) {
-  .c-section {
-    outline: none;
-  }
-}
+// @include media-breakpoint-up(lg) {
+//   .c-section {
+//     outline: none;
+//   }
+// }
