--- a/app/views/404.twig
+++ b/app/views/404.twig
@@ -3,13 +3,9 @@
 {% block body %}
   <section class="c-section c-section--404">
     <div class="container py-5">
-      <h1 class="c-section-content-title text-center pri-color w-sbold mb-3">
-        Error 404
-      </h1>
-      <div class="c-section-content c-section-content--normal position-relative mb-5">
-        <p class="m-0 text-center">Página no encontrada</p>
-      </div>
-      <div class="d-flex flex-column align-items-center pt-3 mb-2">
+      <h1 class="fs-25 text-center pri-color w-sbold mb-3">Error 404</h1>
+      <p class="mb-5 text-center">Página no encontrada</p>
+      <div class="flex flex-column align-items-center pt-3 mb-2">
         <figure class="c-pic mb-4">
           <img src="{{theme.link}}/static/public/{{image404}}" alt="">
         </figure>
