--- a/resources/vue/src/assets/styles/components/_button.scss
+++ b/resources/vue/src/assets/styles/components/_button.scss
@@ -7,6 +7,7 @@
   display: inline-block;
   outline: none;
   cursor: pointer;
+  text-decoration: none;
 
   @include mixins.b-radious(5px);
   @include mixins.transition(0.2s);
