--- a/resources/vue/src/assets/styles/components/_header.scss
+++ b/resources/vue/src/assets/styles/components/_header.scss
@@ -1,5 +1,6 @@
 @use '../base/variables';
 @use '../base/mixins';
+@use '../base/core';
 
 .c-header {
   background: variables.$white;
@@ -120,139 +121,131 @@
   }
 }
 
-// @include media-breakpoint-up(lg) {
-//   .c-header {
-//     position: sticky;
+@include core.media-breakpoint-up(lg) {
+  .c-header {
+    position: sticky;
 
-//     .c-nav {
-//       height: 80px;
-//       position: relative;
-//       display: flex;
-//       justify-content: space-between;
-//       align-items: center;
-//       flex-direction: row;
+    .c-nav {
+      height: 80px;
+      position: relative;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: row;
 
-//       &__left {
-//         .c-menu {
-//           justify-content: flex-end;
-//         }
-//       }
+      &__left {
+        .c-menu {
+          justify-content: flex-end;
+        }
+      }
 
-//       &__right {
-//         background: transparent;
-//         display: flex;
-//         align-items: center;
-//         height: 100%;
-//         transform: translateY(0);
+      &__right {
+        background: transparent;
+        display: flex;
+        align-items: center;
+        height: 100%;
+        transform: translateY(0);
 
-//         .c-menu-icon {
-//           display: none;
-//         }
+        .c-menu-icon {
+          display: none;
+        }
 
-//         .c-menu {
-//           opacity: 1;
-//           visibility: visible;
-//           display: flex;
-//           flex-direction: row;
-//           justify-content: flex-start;
-//           height: 100%;
-//         }
+        .c-menu {
+          opacity: 1;
+          visibility: visible;
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-start;
+          height: 100%;
+        }
 
-//         .c-menu .menu-item {
-//           display: flex;
-//           align-items: center;
-//           justify-content: center;
-//         }
+        .c-menu .menu-item {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
 
-//         .c-menu .menu-item > a {
-//           padding: 1rem 0;
-//           margin-right: 1rem;
-//           margin-left: 1rem;
-//         }
+        .c-menu .menu-item > a {
+          padding: 1rem 0;
+          margin-right: 1rem;
+          margin-left: 1rem;
+        }
 
-//         .c-menu .menu-item > a::after {
-//           content: '';
-//           width: 0;
+        .c-menu .menu-item > a::after {
+          content: '';
+          width: 0;
 
-//           @include transition(0.2s);
-//         }
+          @include mixins.transition(0.2s);
+        }
 
-//         .c-menu .menu-item.activate > a {
-//           @include hr(center, bottom, $primary-color, 2px, 0.5rem);
-//         }
+        .c-menu .menu-item:hover .c-sub-menu {
+          visibility: visible;
+          opacity: 1;
+        }
 
-//         .c-menu .menu-item:hover > a {
-//           @include hr(center, bottom, $primary-color, 2px, 0.5rem);
-//         }
+        .c-sub-menu {
+          border-radius: 0 0 10px 10px;
+          padding: 0.7rem;
+          background: variables.$secondary-color;
+          width: 300px;
+          z-index: 20;
+          top: 60.5px;
+          left: 0;
+          visibility: hidden;
+          opacity: 0;
 
-//         .c-menu .menu-item:hover .c-sub-menu {
-//           visibility: visible;
-//           opacity: 1;
-//         }
+          @include mixins.transition(0.2s);
 
-//         .c-sub-menu {
-//           border-radius: 0 0 10px 10px;
-//           padding: 0.7rem;
-//           background: $secondary-color;
-//           width: 300px;
-//           z-index: 20;
-//           top: 60.5px;
-//           left: 0;
-//           visibility: hidden;
-//           opacity: 0;
+          &__item a {
+            padding: 0.5rem 0.7rem !important;
+            color: variables.$white;
+            font-family: variables.$secondary-font-family;
+            font-size: variables.$fs-16;
+            font-weight: variables.$font-semibold;
 
-//           @include transition(0.2s);
+            @include mixins.transition(0.2s);
+          }
 
-//           &__item a {
-//             padding: 0.5rem 0.7rem !important;
-//             color: $white;
-//             font-family: $secondary-font-family;
-//             font-size: $fs-16;
-//             font-weight: $font-semibold;
+          &__item a::after {
+            content: '';
+            width: 3px;
+            height: 100%;
+            background: variables.$primary-color;
+            position: absolute;
+            left: 0;
+            top: 0;
+            visibility: hidden;
+            opacity: 0;
 
-//             @include transition(0.2s);
-//           }
+            @include mixins.transition(0.2s);
+          }
 
-//           &__item a::after {
-//             content: '';
-//             width: 3px;
-//             height: 100%;
-//             background: $primary-color;
-//             position: absolute;
-//             left: 0;
-//             top: 0;
-//             visibility: hidden;
-//             opacity: 0;
+          &__item a:hover {
+            color: variables.$white !important;
+            transform: translateX(5px);
+          }
 
-//             @include transition(0.2s);
-//           }
+          &__item a:focus {
+            color: variables.$white !important;
+            transform: translateX(5px);
+          }
 
-//           &__item a:hover {
-//             color: $white !important;
-//             transform: translateX(5px);
-//           }
+          &__item a:focus::after,
+          &__item a:hover::after {
+            visibility: visible;
+            opacity: 1;
+          }
+        }
+      }
+    }
+  }
 
-//           &__item a:focus {
-//             color: $white !important;
-//             transform: translateX(5px);
-//           }
-
-//           &__item a:focus::after,
-//           &__item a:hover::after {
-//             visibility: visible;
-//             opacity: 1;
-//           }
-//         }
-//       }
-//     }
-//   }
-
-//   .c-header-mobile {
-//     &--visible {
-//       height: 80px;
-//       visibility: hidden;
-//       opacity: 0;
-//       transform: translateY(-100%);
-//     }
-//   }
-// }
+  .c-header-mobile {
+    &--visible {
+      height: 80px;
+      visibility: hidden;
+      opacity: 0;
+      transform: translateY(-100%);
+    }
+  }
+}
