feature + fix: agregar sal, swiper / actualizar dependencias de composer (timber, eloquent, kint) / remoe API from .env / corregir example.js in admin enqueue

--- a/resources/vue/src/assets/styles/imports/modules.scss
+++ b/resources/vue/src/assets/styles/imports/modules.scss
@@ -1,5 +1,3 @@
-// @import "../autoload/aos";
-
 @import '../autoload/prime';
-
-// @import "../autoload/swiper";
+@import '../autoload/sal';
+@import '../autoload/swiper';
