--- a/resources/vue/src/assets/styles/pages/_page.scss
+++ b/resources/vue/src/assets/styles/pages/_page.scss
@@ -6,7 +6,7 @@
 
   &__title {
     font-size: variables.$fs-30;
-    color: variables.$black;
+    color: variables.$white-color;
     font-weight: variables.$font-bold;
   }
 
