--- a/resources/vue/src/assets/styles/base/_base.scss
+++ b/resources/vue/src/assets/styles/base/_base.scss
@@ -13,7 +13,12 @@ html {
 body {
   width: 100%;
   overflow-x: hidden;
-  color: variables.$gray-dark !important;
+  color: variables.$gray-color-500 !important;
+  background-color: variables.$black-color;
+
+  p {
+    line-height: 26px;
+  }
 }
 
 a {
@@ -23,7 +28,7 @@ a {
 h1,
 h2,
 h3 {
-  color: variables.$black;
+  color: variables.$black-color;
   font-family: variables.$secondary-font-family !important;
   margin: 0;
 }
@@ -41,11 +46,11 @@ h3 {
   }
 
   &::-webkit-scrollbar-thumb {
-    background: variables.$gray-dark;
+    background: variables.$gray-color-400;
     border-radius: 10px;
 
     &:hover {
-      background: variables.$black;
+      background: variables.$black-color;
     }
 
     &:active {
@@ -57,7 +62,7 @@ h3 {
 .c-loader-app {
   @include mixins.flex-center;
 
-  background-color: variables.$white;
+  background-color: variables.$white-color;
   width: 100%;
   height: 100vh;
   position: absolute;
@@ -93,5 +98,6 @@ h3 {
 
   &:has(.loaded) {
     overflow: auto;
+    height: auto;
   }
 }
