--- a/resources/vue/src/assets/styles/base/_variables.scss
+++ b/resources/vue/src/assets/styles/base/_variables.scss
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&family=Titillium+Web&family=Ubuntu:wght@400;700&display=swap';
+@import 'https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800;900&display=swap';
 
 /*
 * -----------------------------------------------------------/
@@ -6,30 +6,28 @@
 * -----------------------------------------------------------/
 */
 
-/* 1.1 Base colors */
-$primary-color: #0064ec;
-$secondary-color: #6600ec;
-$success-color: #3adb76;
-$warning-color: #ffae00;
-$alert-color: #e00808;
+/* Primary colors */
+$primary-color: #0064ec; /* 400 */
+$primary-color-500: #0449c9;
 
-/* 1.2 Alter colors */
+/* Secondary colors */
+$secondary-color-200: #ac8cd6;
+$secondary-color: #6600ec; /* 400 */
 
-/* 1.2.1 Primary */
-$primary-alt: #0053ec;
+/* Gray colors */
+$gray-color: #e5e5e5; /* 200 */
+$gray-color-300: #d6d6d6;
+$gray-color-400: #bdbdbd;
+$gray-color-500: #a6a6a6;
 
-/* 1.2.2 Secondary */
-$secondary-alt: #ac8cd6;
-
-/* 1.2 Gray colors */
-$gray-light: #f3f3f3;
-$gray: #e5e5e5;
-$gray-medium: #cfcfcf;
-$gray-dark: #6d6d6d;
-
-/* 1.2 Other colors */
-$black: #434343;
-$white: #fff;
+/* Util colors */
+$white-color: #fff;
+$black-color: #202120;
+$black-color-100: #1b1c1c;
+$util-success-color: #0f6;
+$util-warning-color: #ffb800;
+$util-alert-color: #ff4a4a;
+$util-info-color: #00b2ff;
 
 /*
 * -----------------------------------------------------------/
@@ -58,5 +56,5 @@ $font-extrabold: 800;
 $font-black: 900;
 
 /* 2.3 Font Families */
-$body-font-family: 'Josefin Sans', sans-serif;
-$secondary-font-family: 'Josefin Sans', sans-serif;
+$body-font-family: 'Work Sans', sans-serif;
+$secondary-font-family: 'Work Sans', sans-serif;
