--- a/resources/vue/src/assets/styles/components/_button.scss
+++ b/resources/vue/src/assets/styles/components/_button.scss
@@ -3,34 +3,26 @@
 
 .c-button {
   font-size: variables.$fs-16;
-  padding: 0.7rem 1rem;
+  padding: 0.6rem 1.5rem;
   display: inline-block;
   outline: none;
-  cursor: pointer;
   text-decoration: none;
+  font-weight: variables.$font-semibold;
+  text-align: center;
+  cursor: pointer;
 
   @include mixins.b-radious(5px);
   @include mixins.transition(0.2s);
 
   &--primary {
     background-color: variables.$primary-color;
-    color: variables.$white;
+    color: variables.$white-color;
     border: none;
 
-    &:hover,
-    &:focus {
-      background-color: variables.$primary-alt;
-      color: variables.$white;
-    }
-  }
-
-  &--white {
-    background-color: variables.$white;
-    color: variables.$primary-color;
-
-    &:hover,
-    &:focus {
-      color: variables.$primary-color;
+    &:hover:not(.loading),
+    &:focus:not(.loading) {
+      background-color: variables.$primary-color-500;
+      color: variables.$white-color !important;
     }
   }
 }
