--- a/resources/vue/src/assets/styles/imports/components.scss
+++ b/resources/vue/src/assets/styles/imports/components.scss
@@ -1,7 +1,6 @@
-@import '../components/brands';
-@import '../components/button';
-@import '../components/footer';
-@import '../components/form';
-@import '../components/header';
-@import '../components/pagination';
-@import '../components/toggle';
+@use '../components/button';
+@use '../components/footer';
+@use '../components/form';
+@use '../components/header';
+@use '../components/link';
+@use '../components/sidebar';
